# spt3g_software

./: .buildinfo  .gitattributes  .gitignore  CMakeLists.txt  MANIFEST.in  README.rst  VERSION  autodoc.html  buildsystem.html  commonissues.html  dataacquisition.html  fileio.html  frames.html  genindex.html  index.html  logging.html  moddoc_calibration.html  moddoc_core.html  moddoc_dfmux.html  moddoc_examples.html  moddoc_gcp.html  moddoc_maps.html  moddoc_mpi.html  modules.html  networkstreaming.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py  styleguide.html  units.html
coordinateutils/: CMakeLists.txt  README.rst
coordinateutils/include/coordinateutils/: CutSkyHealpixMap.h  FlatSkyMap.h  G3SkyMap.h  HealpixSkyMap.h  chealpix.h  coordinateutils.h  flatskyprojection.h  maputils.h  pointing.h  polarizationutils.h  quaternion.h  wcs.h
coordinateutils/python/: __init__.py  azel.py  coordinate_modules.py  coordsysmodules.py  fitsio.py  map_modules.py  maputils.py  quathelpers.py  skymapaddons.py
coordinateutils/src/: CutskyHealpixMap.cxx  FlatSkyMap.cxx  G3SkyMap.cxx  HealpixSkyMap.cxx  MapData.hpp  chealpix.c  coordinateutils.cpp  flatskyprojection.cpp  flatskyprojection.cxx  get_interp_val.c  hget.c  iget.c  mapdata.cxx  mapdata.h  maputils.cpp  maputils.cxx  pointing.cxx  polarizationutils.cpp  python.cpp  python.cxx  quaternion.cpp  quaternion.cxx  wcscon.c
coordinateutils/tests/: coord_change_fixture.py  fitsio.py  flatsky_maps.py  flatskymap_operators.py  healpix_maps.py  healpixskymap_operators.py  polarization_transforms_fixture.py  quatangtest.py  quattest.py  skymappybindings.py  transtest.py  weights_operators.py
core/: CMakeLists.txt  README.rst
core/include/cereal/: README  cereal.hpp
core/include/core/: ApplePthreadBarrier.h  G3.h  G3Constants.h  G3Data.h  G3EventBuilder.h  G3Frame.h  G3Logging.h  G3Map.h  G3Module.h  G3NetworkSender.h  G3Pipeline.h  G3PipelineInfo.h  G3Quat.h  G3Reader.h  G3SimpleLoggers.h  G3SkyMap.h  G3TimeStamp.h  G3Timesample.h  G3Timestream.h  G3TriggeredBuilder.h  G3Units.h  G3Vector.h  G3Writer.h  SetThreadName.h  container_conversions.h  container_pybindings.h  containers.h  dataio.h  pybind11_compat.h  pybindings.h  serialization.h  std_map_indexing_suite.hpp
core/python/: G3File.py  G3FileStager.py  __init__.py  apidoc.py  dataextensions.py  docparser.py  fileio.py  frameextensions.py  funcconstruct.py  g3decorators.py  g3logging.py  load_pybindings.py  modconstruct.py  multiprocess.py  parse_pipeline_graph.py  quatextensions.py  skymapaddons.py  timestreamextensions.py  util.py
core/src/: ApplePthreadBarrier.cxx  G3Data.cxx  G3EventBuilder.cxx  G3Frame.cxx  G3InfiniteSource.cxx  G3Logging.cxx  G3Map.cxx  G3MultiFileWriter.cxx  G3NetworkSender.cxx  G3Pipeline.cxx  G3PipelineInfo.cxx  G3PrintfLogger.cxx  G3Quat.cxx  G3Reader.cxx  G3SkyMap.cxx  G3SuperTimestream.cxx  G3SuperTimestream.h  G3SyslogLogger.cxx  G3TimeStamp.cxx  G3Timesample.cxx  G3Timestream.cxx  G3TriggeredBuilder.cxx  G3Units.cxx  G3Vector.cxx  G3Writer.cxx  compression.cxx  compression.h  counter64.hpp  crc32.c  dataio.cxx  dataio.h  dload.c  int_storage.cxx  int_storage.h  pybindings.cxx  python.cxx  streams.h
core/tests/: G3TimestreamMapTest.cxx  G3TimestreamTest.cxx  OrderedMapTest.cxx  bz2fileio.py  cached_frame.py  compressedfileio.py  copycons.py  cuts.py  datatypes.py  deduplicate.py  droporphanmetadata.py  endprocessing.py  fileio.py  frame_types.py  frameobjects.py  framepickle.py  frames.py  imports.py  jsonio.py  lazyreader.py  maps.py  multifileio.py  multiproc.py  networktest.py  non_contiguous_vectors.py  non_double_timestreams.py  pipeline.py  pipeline_module.py  pipelineinfo.py  portability.py  quaternions.py  returnvals.py  skymappybindings.py  splitfileio.py  testcomplexconv.py  timesample.py  timestream_2d.py  timestream_ops.py  timestream_slicing.py  timestream_times.py  (+6 more)
core/tests/portability/: test-be.g3  test-le-v2.g3  test-le.g3
dfmux/: CMakeLists.txt  README.rst
dfmux/examples/: dfmux_daq.py
dfmux/include/dfmux/: DfMuxBuilder.h  DfMuxCollector.h  DfMuxSample.h  HardwareMap.h  Housekeeping.h
dfmux/onlinescripts/: record_bolodata.py  record_bolodata_pb2a.py  teeledgerman.py
dfmux/python/: DataQualityTools.py  HardwareMapTools.py  Housekeeping.py  IceboardConversions.py  LegacyHousekeeping.py  ScanTools.py  TFPolyJSON_Rev3_Mezz.txt  TFPoly_full_with_10MHz_pi.txt  TuberClient.py  __init__.py  spt3g_filtering_2017_full.txt  unittransforms.py  wtl_ConvertUtils.py
dfmux/src/: DfMuxBuilder.cxx  DfMuxCollator.cxx  DfMuxCollector.cxx  DfMuxSample.cxx  HardwareMap.cxx  Housekeeping.cxx  LegacyDfMuxCollector.cxx  NetCDFDump.cxx  python.cxx
dfmux/tests/: imports.py
gcp/: CMakeLists.txt
gcp/include/gcp/: ACUStatus.h  Experiments.h  TrackerPointing.h  TrackerStatus.h
gcp/python/: ARCExtractor.py  ARCFile.py  ARCHKExtractor.py  CalFile.py  G3RegCal.txt  GCPDataTee.py  InfluxDB.py  __init__.py
gcp/src/: ACUStatus.cxx  ARCFileReader.cxx  GCPLogger.cxx  GCPMuxDataDecoder.cxx  TrackerPointing.cxx  TrackerStatus.cxx  python.cxx
gcp/tests/: imports.py
maps/: CMakeLists.txt  README.rst
maps/python/: __init__.py  azel.py  coordsysmodules.py  finals2000A.all  fitsio.py  map_modules.py  maputils.py  quathelpers.py  skymapaddons.py
maps/src/: FlatSkyMap.cxx  FlatSkyProjection.cxx  G3SkyMap.cxx  G3SkyMapMask.cxx  HealpixSkyMap.cxx  HealpixSkyMapInfo.cxx  HitsBinner.cxx  MapBinner.cxx  MapMockObserver.cxx  MapTODMasker.cxx  MapTODPointing.cxx  SingleDetectorBoresightBinner.cxx  SingleDetectorMapBinner.cxx  chealpix.c  chealpix.h  get_interp_val.c  mapdata.cxx  mapdata.h  maputils.cxx  pointing.cxx  python.cxx
maps/tests/: crop_maps.py  fitsio.py  flatsky_maps.py  flatskymap_operators.py  healpix_maps.py  healpixskymap_operators.py  imports.py  map_modules.py  mask_operators.py  mask_serialization_test.py  quatangtest.py  transtest.py  weights_operators.py
so/: CMakeLists.txt
so/python/: __init__.py
so/src/: G3SuperTimestream.cxx  numpy_assist.cxx  python.cxx
so/tests/: imports.py
(+161 files in other folders)
