[build-system]
requires = [
    "cmake>=3.12",
    "setuptools>=61",
    "setuptools_scm[toml]>=6.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "spt3g"
readme = "README.rst"
description = "Public Subset of Analysis Software Developed by the SPT-3G Collaboration"
urls = {source = "https://github.com/CMB-S4/spt3g_software"}
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = ["numpy", "scipy", "astropy"]
dynamic=["version"]

[project.optional-dependencies]
dev = ["pytest", "healpy"]

[tool.setuptools_scm]
version_file = "./wheel/spt3g/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"
fallback_version = "0.0"

[tool.cibuildwheel]
test-extras = ["dev"]
